<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/newGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/addNewCardSetHint" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newGroupName"
        android:layout_below="@+id/newGroupName"
        android:layout_marginTop="59dp"
        android:text="@string/OK" />

    <Button
        android:id="@+id/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/OK"
        android:layout_alignBottom="@+id/OK"
        android:layout_alignRight="@+id/newGroupName"
        android:text="@string/cancel" />

</RelativeLayout>